--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ README_test.md
 junk/
 prediction_notebooks/cache/
 scripts/cache/
+quick_fixes.py
+DATA_SCIENCE_BEST_PRACTICES.md
+CHECKLIST_BEFORE_RUNNING.md
+IMPLEMENTATION_SUMMARY.md
+TRACK_SPECIFIC_MODELS_SUMMARY.md
+track_specific_training_cell.py
