--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ CHECKLIST_BEFORE_RUNNING.md
 IMPLEMENTATION_SUMMARY.md
 TRACK_SPECIFIC_MODELS_SUMMARY.md
 track_specific_training_cell.py
+CHANGES_SUMMARY.md
+usgp_predict_standalone.py
+fix_gridpos_encoding.py
+remove_quali_feature.py
